Fixed #50, Contrast Ratio issue

--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -41,7 +41,7 @@ body {
 	}
 }
 
-body .container-main{
+body .container-main {
 	min-height: 100vh;
 }
 
@@ -57,14 +57,15 @@ body .container-main{
 	}
 }
 
-.j-install-menu{
+.j-install-menu {
 	margin: 0;
 	padding: 0;
 	width: 100%;
 	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.15);
 	background-color: #ffffff;
-	list-style: none;
-	button{
+  list-style: none;
+
+	button {
 		display: block;
 		width: 100%;
 		padding: 0.857rem 1.143rem 0.857rem 2.857rem;
@@ -74,8 +75,9 @@ body .container-main{
 		position: relative;
 		border-left: 3px solid transparent;
 		color: var(--secondary-text-color);
-		font-size: 1.143rem;
-		&::before{
+    font-size: 1.143rem;
+
+		&::before {
 			content: '';
 			position: absolute;
 			height: 1.143rem;
@@ -86,23 +88,27 @@ body .container-main{
 			left: 1rem;
 			top: 50%;
 			transform: translateY(-50%);
-		}
+    }
+
 		&:active,
-		&:focus{
+		&:focus {
 			outline: 1px dotted rgba(var(--primary-rgb), .5);
 			outline-offset: -1px;
-		}
-		&.active{
+    }
+
+		&.active {
 			border-left-color: var(--primary-color);
 			background: rgba(var(--primary-rgb), .1);
-			color: var(--primary-text-color);
-			&::before{
+      color: var(--primary-text-color);
+
+			&::before {
 				background: var(--primary-color);
 				border-color: var(--primary-color);
 			}
-		}
-		&.completed{
-			&::before{
+    }
+
+		&.completed {
+			&::before {
 				background: var(--primary-color);
 				border-color: var(--primary-color);
 				content: "\f00c";
@@ -116,8 +122,8 @@ body .container-main{
 		}
 	}
 
-	li{
-		&.j-insallation-has-error{
+	li {
+		&.j-insallation-has-error {
 			button {
 				border-left-color: var(--danger-color);
 				background: rgba(var(--danger-rgb),.1);
@@ -137,34 +143,38 @@ body .container-main{
 		}
 	}
 }
-.j-install-form.active{
+.j-install-form.active {
 	min-height: 100%;
 	width: 100%;
 	border-radius: 3px;
 	box-shadow: 0 30px 60px -10px rgba(0, 28, 73, 0.15);
 	border: solid 1px #eaeef5;
 	background: #fff;
-	position: relative;
-	&:not(.no-padding){
+  position: relative;
+
+	&:not(.no-padding) {
 		padding: 2.143rem 2.143rem 7.5rem;
-	}
-	&.no-padding{
+  }
+
+	&.no-padding {
 		padding-bottom: 3.571rem;
-	}
-	&.only-pb{
+  }
+
+	&.only-pb {
 		padding: 0 0 7.5rem;
 	}
 }
 
-.j-install-step-footer{
+.j-install-step-footer {
 	position: absolute;
 	width: 100%;
 	bottom: 2.143rem;
 	text-align: right;
 	padding: 0 2.143rem;
 	box-sizing: border-box;
-	right: 0;
-	&.no-padding{
+  right: 0;
+
+	&.no-padding {
 		bottom: 0;
 		padding: 0;
 	}
@@ -173,18 +183,22 @@ body .container-main{
 
 .j-install-step {
 	display: none;
-	min-height: 100%;
+  min-height: 100%;
+
 	&.active {
 		display: block;
-	}
+  }
+
 	select {
 		width: 100%;
 		margin-left: 0 !important;
-	}
+  }
+
 	.btn-block {
 		margin-top: 40px;
-	}
-	.btn-wrapper .btn + .btn{
+  }
+
+	.btn-wrapper .btn + .btn {
 		margin-left: 0.429rem;
 	}
 }
@@ -206,7 +220,8 @@ body .container-main{
 	margin: 0 0 20px;
 	background: #fafafa;
 	border: 1px solid rgba(0,0,0,.1);
-	box-shadow: 0 0 10px rgba(0,0,0,.05);
+  box-shadow: 0 0 10px rgba(0,0,0,.05);
+
 	p {
 		margin-bottom: 0;
 	}
@@ -218,7 +233,8 @@ body .container-main{
 	width: 25%;
 	margin-bottom: 0;
 	font-size: 3rem;
-	opacity: .6;
+  opacity: .6;
+
 	.fa {
 		width: 100%;
 		text-align: center;
@@ -260,15 +276,15 @@ caption {
 	color: var(--icon-color);
 }
 
-.form-control-feedback{
+.form-control-feedback {
 	font-size: 0.786rem;
 }
 
-.j-install-step .input-group{
+.j-install-step .input-group {
 	display: block;
 }
 
-.j-install-from-pass-info{
+.j-install-from-pass-info {
 	padding-left: 20px;
 	margin: 5px 0 0;
 }
@@ -280,7 +296,7 @@ caption {
 		transform: rotate(360deg);
 	}
 }
-.j-spinner{
+.j-spinner {
 	--spinner-size: 16px;
 	display: inline-block;
 	animation: spinner-circle-rotate .6s linear infinite;
@@ -299,12 +315,12 @@ caption {
 }
 
 
-.j-spinner.inactive{
+.j-spinner.inactive {
 	animation: none;
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='22 22 44 44'%3E%3Ccircle class='background' cx='44' cy='44' r='19' fill='none' stroke-width='6' stroke='%23dddddd'%3E%3C/circle%3E%3Ccircle class='spinner-circle-dash' cx='44' cy='44' r='19' fill='none' stroke-width='6' stroke='%23288feb' stroke-dasharray='119.38052083641213' stroke-dashoffset='-119.38052083641213'%3E%3C/circle%3E%3C/svg%3E");
 }
 
-.j-spinner.done{
+.j-spinner.done {
 	animation: none;
 	background: #288feb;
 	background-size: 55%;
@@ -314,30 +330,36 @@ caption {
 }
 
 .j-install-completing-list {
-	margin-top: 30px;
-	ul{
+  margin-top: 30px;
+
+	ul {
 		list-style: none;
-		padding: 0;
-		li{
+    padding: 0;
+
+		li {
 			display: flex;
 			align-items: center;
-			padding: 10px 0;
-			&:not(:first-child){
+      padding: 10px 0;
+
+			&:not(:first-child) {
 				border-top: 1px solid #eaeef5;
-			}
-			&:not(.active){
+      }
+
+			&:not(.active) {
 				opacity: .4;
-			}
+      }
+
 			span.j-spinner {
 				margin: 0 10px 0 0;
 			}
 		}
 	}
 }
-.j-install-step small.form-text{
+.j-install-step small.form-text {
 	overflow: hidden;
-	margin-top: 0.714rem;
-	&.info::before{
+  margin-top: 0.714rem;
+
+	&.info::before {
 		content: "\f129";
 		font-family: Font Awesome\ 5 Free;
 		font-weight: 900;
@@ -351,7 +373,7 @@ caption {
 		width: 1rem;
 		height: 1rem;
 		border: 1px solid var(--secondary-icon-color);
-		color: var(--secondary-icon-color);
+		color: #5E727C;
 		border-radius: 50%;
 		text-align: center;
 		font-size: .571rem;
@@ -361,19 +383,21 @@ caption {
 	}
 }
 
-.form-text{
-	color: var(--icon-color);
+.form-text {
+	color: #5E727C;
 }
 
-.j-install-step-iconic-header{
+.j-install-step-iconic-header {
 	padding: 23px 30px;
 	border-bottom: 1px solid var(--bg-color);
-	overflow: hidden;
-	span{
+  overflow: hidden;
+
+	span {
 		line-height: 23px;
 		color: var(--success-color)
-	}
-	.icon{
+  }
+
+	.icon {
 		height: 23px;
 		width: 23px;
 		text-align: center;
@@ -386,12 +410,12 @@ caption {
 	}
 }
 
-.j-install-step-body{
+.j-install-step-body {
 	padding: 0 30px;
 	color: var(--secondary-text-color)
 }
 
-.j-install-step-body h4{
+.j-install-step-body h4 {
 	font-size: 1rem;
 	font-weight: 400;
 	line-height: 1.571rem;
@@ -399,69 +423,78 @@ caption {
 	color: var(--primary-text-color)
 }
 
-.j-install-step-btn-group{
+.j-install-step-btn-group {
 	width: 100%;
 }
 
-.j-install-step-table{
+.j-install-step-table {
 	margin-bottom: 2.071rem;
 	margin-top: 0.714rem;
 }
 
 .j-install-scrollable-table table,
-.j-install-step-table{
-	width: 100%;
-	thead{
+.j-install-step-table {
+  width: 100%;
+
+	thead {
 		td,
-		th{
+		th {
 			border-bottom: 1px solid var(--bg-color);
 			font-weight: 400;
 			color: var(--secondary-text-color);
 		}
-	}
+  }
+
 	th,
-	td{
-		padding: 11px 30px;
-		&:not(:first-child){
+	td {
+    padding: 11px 30px;
+
+		&:not(:first-child) {
 			text-align: center;
 			padding-left: 15px;
 			padding-right: 15px;
-		}
-		&:first-child{
+    }
+
+		&:first-child {
 			padding-right: 15px;
-		}
-		&:last-child{
+    }
+
+		&:last-child {
 			padding-left: 15px;
-		}
-		.success{
+    }
+
+		.success {
 			color: var(--success-color);
-		}
-		.danger{
+    }
+
+		.danger {
 			color: var(--danger-color);
 		}
-	}
-	tr:nth-child(even){
+  }
+
+	tr:nth-child(even) {
 		th,
-		td{
+		td {
 			background: var(--bg-color);
 		}
 	}
 }
 
-.j-install-scrollable-table{
+.j-install-scrollable-table {
 	max-height: 450px;
 	overflow-y: auto;
 }
 
 @media only screen and (min-width: 768px) {
-	.j-install-righ-col{
+	.j-install-righ-col {
 		max-width: 425px;
 	}
 }
 
-.j-install-remove-check{
+.j-install-remove-check {
 	text-align: center;
-	margin-bottom: 2.071rem;
+  margin-bottom: 2.071rem;
+
 	#removeInstallationFolder {
 		font-weight: 500;
 	}
